@@ -14,7 +14,6 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
 package com.loom.engine;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
@@ -27,73 +26,72 @@ import com.loom.llm.LLMResponse;
 import com.loom.mcp.MCPClient;
 import com.loom.storage.repository.*;
 import com.loom.transport.SSEManager;
-import lombok.extern.slf4j.Slf4j;
-
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import lombok.extern.slf4j.Slf4j;
 
 /**
  * Executes a single-agent workflow node:
+ *
  * <ol>
- *   <li>Loads skill markdown from {@link SkillRepository}</li>
- *   <li>Fetches workspace knowledge scoped to the session's workspaceId</li>
- *   <li>Calls {@link ContextBuilder#build} to assemble the {@link LLMRequest}</li>
- *   <li>Streams tokens via {@link LLMGateway#send}, broadcasting
- *       {@link EventType#AGENT_TOKEN} events</li>
- *   <li>Handles tool_use calls via {@link MCPClient}</li>
- *   <li>Persists output via {@link ReportWriter} and broadcasts
- *       {@link EventType#AGENT_REPORT_WRITTEN}</li>
- *   <li>Broadcasts {@link EventType#SESSION_COMPLETED} or
- *       {@link EventType#SESSION_FAILED}</li>
+ *   <li>Loads skill markdown from {@link SkillRepository}
+ *   <li>Fetches workspace knowledge scoped to the session's workspaceId
+ *   <li>Calls {@link ContextBuilder#build} to assemble the {@link LLMRequest}
+ *   <li>Streams tokens via {@link LLMGateway#send}, broadcasting {@link EventType#AGENT_TOKEN}
+ *       events
+ *   <li>Handles tool_use calls via {@link MCPClient}
+ *   <li>Persists output via {@link ReportWriter} and broadcasts {@link
+ *       EventType#AGENT_REPORT_WRITTEN}
+ *   <li>Broadcasts {@link EventType#SESSION_COMPLETED} or {@link EventType#SESSION_FAILED}
  * </ol>
  */
 @Slf4j
 public class AgentRuntime {
 
-    private final LLMGateway                llmGateway;
-    private final MCPClient                 mcpClient;
-    private final SSEManager                sseManager;
-    private final SkillRepository           skillRepository;
+    private final LLMGateway llmGateway;
+    private final MCPClient mcpClient;
+    private final SSEManager sseManager;
+    private final SkillRepository skillRepository;
     private final WorkspaceKnowledgeRepository knowledgeRepository;
-    private final AgentExecutionRepository  executionRepository;
-    private final SessionRepository         sessionRepository;
-    private final WorkflowRepository        workflowRepository;
-    private final AgentRepository           agentRepository;
-    private final ContextBuilder            contextBuilder;
-    private final ReportWriter              reportWriter;
-    private final ObjectMapper              mapper = new ObjectMapper();
+    private final AgentExecutionRepository executionRepository;
+    private final SessionRepository sessionRepository;
+    private final WorkflowRepository workflowRepository;
+    private final AgentRepository agentRepository;
+    private final ContextBuilder contextBuilder;
+    private final ReportWriter reportWriter;
+    private final ObjectMapper mapper = new ObjectMapper();
 
-    public AgentRuntime(LLMGateway llmGateway,
-                        MCPClient mcpClient,
-                        SSEManager sseManager,
-                        SkillRepository skillRepository,
-                        WorkspaceKnowledgeRepository knowledgeRepository,
-                        AgentExecutionRepository executionRepository,
-                        SessionRepository sessionRepository,
-                        WorkflowRepository workflowRepository,
-                        AgentRepository agentRepository) {
-        this.llmGateway         = llmGateway;
-        this.mcpClient          = mcpClient;
-        this.sseManager         = sseManager;
-        this.skillRepository    = skillRepository;
+    public AgentRuntime(
+            LLMGateway llmGateway,
+            MCPClient mcpClient,
+            SSEManager sseManager,
+            SkillRepository skillRepository,
+            WorkspaceKnowledgeRepository knowledgeRepository,
+            AgentExecutionRepository executionRepository,
+            SessionRepository sessionRepository,
+            WorkflowRepository workflowRepository,
+            AgentRepository agentRepository) {
+        this.llmGateway = llmGateway;
+        this.mcpClient = mcpClient;
+        this.sseManager = sseManager;
+        this.skillRepository = skillRepository;
         this.knowledgeRepository = knowledgeRepository;
         this.executionRepository = executionRepository;
-        this.sessionRepository  = sessionRepository;
+        this.sessionRepository = sessionRepository;
         this.workflowRepository = workflowRepository;
-        this.agentRepository    = agentRepository;
-        this.contextBuilder     = new ContextBuilder(mcpClient);
-        this.reportWriter       = new ReportWriter(knowledgeRepository);
+        this.agentRepository = agentRepository;
+        this.contextBuilder = new ContextBuilder(mcpClient);
+        this.reportWriter = new ReportWriter(knowledgeRepository);
     }
 
     /**
-     * Runs the full execution chain for the given session:
-     * sets status to RUNNING, iterates over workflow nodes in order,
-     * then marks the session COMPLETED or FAILED.
+     * Runs the full execution chain for the given session: sets status to RUNNING, iterates over
+     * workflow nodes in order, then marks the session COMPLETED or FAILED.
      *
-     * @param sessionId    id of the session to run
+     * @param sessionId id of the session to run
      * @param inputContext the user-supplied input context for the first node
      */
     public void execute(String sessionId, String inputContext) {
@@ -110,7 +108,8 @@ public class AgentRuntime {
         broadcast(sessionId, EventType.SESSION_STARTED, Map.of());
 
         // Load the workflow definition and get ordered nodes
-        Optional<WorkflowDefinition> wfOpt = workflowRepository.findById(session.getWorkflowDefinitionId());
+        Optional<WorkflowDefinition> wfOpt =
+                workflowRepository.findById(session.getWorkflowDefinitionId());
         if (wfOpt.isEmpty()) {
             failSession(session, "workflow definition not found");
             return;
@@ -127,7 +126,8 @@ public class AgentRuntime {
         for (WorkflowNode node : nodes) {
             if (node.getNodeType() != NodeType.WORKER) continue; // skip START/END nodes
 
-            Optional<AgentDefinition> agentOpt = agentRepository.findById(node.getAgentDefinitionId());
+            Optional<AgentDefinition> agentOpt =
+                    agentRepository.findById(node.getAgentDefinitionId());
             if (agentOpt.isEmpty()) {
                 failSession(session, "agent not found: " + node.getAgentDefinitionId());
                 return;
@@ -148,11 +148,11 @@ public class AgentRuntime {
     }
 
     /**
-     * Runs a single workflow node for one agent. Returns the agent's output
-     * (to be used as input for the next node), or {@code null} on failure.
+     * Runs a single workflow node for one agent. Returns the agent's output (to be used as input
+     * for the next node), or {@code null} on failure.
      */
-    private String runNode(Session session, WorkflowNode node,
-                           AgentDefinition agent, String inputContext) {
+    private String runNode(
+            Session session, WorkflowNode node, AgentDefinition agent, String inputContext) {
         // 1. Create execution record (status RUNNING)
         AgentExecution execution = new AgentExecution();
         execution.setSessionId(session.getId());
@@ -167,64 +167,84 @@ public class AgentRuntime {
             // 2. Load skill content
             String skillContent = null;
             if (agent.getSkillId() != null) {
-                skillContent = skillRepository.findById(agent.getSkillId())
-                        .map(s -> s.getContent())
-                        .orElse(null);
+                skillContent =
+                        skillRepository
+                                .findById(agent.getSkillId())
+                                .map(s -> s.getContent())
+                                .orElse(null);
             }
 
             // 3. Fetch workspace knowledge
-            List<WorkspaceKnowledge> knowledge = session.getWorkspaceId() != null
-                    ? knowledgeRepository.findByWorkspaceId(session.getWorkspaceId())
-                    : Collections.emptyList();
+            List<WorkspaceKnowledge> knowledge =
+                    session.getWorkspaceId() != null
+                            ? knowledgeRepository.findByWorkspaceId(session.getWorkspaceId())
+                            : Collections.emptyList();
 
             // 4. Build LLM request
-            LLMRequest request = contextBuilder.build(agent, session, skillContent, inputContext, knowledge);
+            LLMRequest request =
+                    contextBuilder.build(agent, session, skillContent, inputContext, knowledge);
 
             // 5. Stream LLM response, collecting full output
             StringBuilder outputBuilder = new StringBuilder();
-            final boolean[] hadError     = { false };
-            final boolean[] hadToolCall  = { false };
-            final LLMRequest[] current   = { request };
+            final boolean[] hadError = {false};
+            final boolean[] hadToolCall = {false};
+            final LLMRequest[] current = {request};
 
-            llmGateway.send(current[0], response -> {
-                switch (response.getType()) {
-                    case LLMResponse.TOKEN:
-                        outputBuilder.append(response.getContent());
-                        broadcast(session.getId(), EventType.AGENT_TOKEN,
-                                Map.of("token", response.getContent(),
-                                       "agentId", agent.getId(),
-                                       "nodeId", node.getId()));
-                        break;
+            llmGateway.send(
+                    current[0],
+                    response -> {
+                        switch (response.getType()) {
+                            case LLMResponse.TOKEN:
+                                outputBuilder.append(response.getContent());
+                                broadcast(
+                                        session.getId(),
+                                        EventType.AGENT_TOKEN,
+                                        Map.of(
+                                                "token", response.getContent(),
+                                                "agentId", agent.getId(),
+                                                "nodeId", node.getId()));
+                                break;
 
-                    case LLMResponse.TOOL_CALL: {
-                        String toolName = response.getToolName();
-                        Map<String, Object> toolInput = response.getToolInput() != null
-                                ? response.getToolInput()
-                                : Collections.emptyMap();
-                        broadcast(session.getId(), EventType.AGENT_TOOL_CALL,
-                                Map.of("toolName", toolName, "toolInput", toolInput));
-                        String toolResult = mcpClient.execute(toolName, toolInput);
-                        broadcast(session.getId(), EventType.AGENT_TOOL_RESULT,
-                                Map.of("toolName", toolName, "result", toolResult));
-                        current[0] = appendToolResult(current[0], toolName, toolResult);
-                        hadToolCall[0] = true;
-                        break;
-                    }
+                            case LLMResponse.TOOL_CALL:
+                                {
+                                    String toolName = response.getToolName();
+                                    Map<String, Object> toolInput =
+                                            response.getToolInput() != null
+                                                    ? response.getToolInput()
+                                                    : Collections.emptyMap();
+                                    broadcast(
+                                            session.getId(),
+                                            EventType.AGENT_TOOL_CALL,
+                                            Map.of("toolName", toolName, "toolInput", toolInput));
+                                    String toolResult = mcpClient.execute(toolName, toolInput);
+                                    broadcast(
+                                            session.getId(),
+                                            EventType.AGENT_TOOL_RESULT,
+                                            Map.of("toolName", toolName, "result", toolResult));
+                                    current[0] = appendToolResult(current[0], toolName, toolResult);
+                                    hadToolCall[0] = true;
+                                    break;
+                                }
 
-                    case LLMResponse.ERROR:
-                        log.warn("LLM error for session={} node={}: {}",
-                                session.getId(), node.getId(), response.getContent());
-                        hadError[0] = true;
-                        break;
+                            case LLMResponse.ERROR:
+                                log.warn(
+                                        "LLM error for session={} node={}: {}",
+                                        session.getId(),
+                                        node.getId(),
+                                        response.getContent());
+                                hadError[0] = true;
+                                break;
 
-                    case LLMResponse.DONE:
-                        break;
+                            case LLMResponse.DONE:
+                                break;
 
-                    default:
-                        log.warn("Unknown LLMResponse type '{}' for session={}",
-                                response.getType(), session.getId());
-                }
-            });
+                            default:
+                                log.warn(
+                                        "Unknown LLMResponse type '{}' for session={}",
+                                        response.getType(),
+                                        session.getId());
+                        }
+                    });
 
             if (hadError[0]) {
                 markExecutionFailed(execution, "LLM returned an error");
@@ -234,17 +254,22 @@ public class AgentRuntime {
 
             // Follow-up turn if there was a tool call
             if (hadToolCall[0]) {
-                llmGateway.send(current[0], response -> {
-                    if (response.getType().equals(LLMResponse.TOKEN)) {
-                        outputBuilder.append(response.getContent());
-                        broadcast(session.getId(), EventType.AGENT_TOKEN,
-                                Map.of("token", response.getContent(),
-                                       "agentId", agent.getId(),
-                                       "nodeId", node.getId()));
-                    } else if (response.getType().equals(LLMResponse.ERROR)) {
-                        hadError[0] = true;
-                    }
-                });
+                llmGateway.send(
+                        current[0],
+                        response -> {
+                            if (response.getType().equals(LLMResponse.TOKEN)) {
+                                outputBuilder.append(response.getContent());
+                                broadcast(
+                                        session.getId(),
+                                        EventType.AGENT_TOKEN,
+                                        Map.of(
+                                                "token", response.getContent(),
+                                                "agentId", agent.getId(),
+                                                "nodeId", node.getId()));
+                            } else if (response.getType().equals(LLMResponse.ERROR)) {
+                                hadError[0] = true;
+                            }
+                        });
             }
 
             if (hadError[0]) {
@@ -263,18 +288,25 @@ public class AgentRuntime {
             executionRepository.save(execution);
 
             // 7. Write report to workspace knowledge
-            WorkspaceKnowledge knowledge2 = reportWriter.write(
-                    execution, agent.getName(), session.getWorkspaceId(), output);
-            broadcast(session.getId(), EventType.AGENT_REPORT_WRITTEN,
-                    Map.of("knowledgeId", knowledge2.getId(),
-                           "title",       knowledge2.getTitle(),
-                           "agentId",     agent.getId()));
+            WorkspaceKnowledge knowledge2 =
+                    reportWriter.write(
+                            execution, agent.getName(), session.getWorkspaceId(), output);
+            broadcast(
+                    session.getId(),
+                    EventType.AGENT_REPORT_WRITTEN,
+                    Map.of(
+                            "knowledgeId", knowledge2.getId(),
+                            "title", knowledge2.getTitle(),
+                            "agentId", agent.getId()));
 
             return output;
 
         } catch (Exception e) {
-            log.error("Unexpected error during node execution session={} node={}",
-                    session.getId(), node.getId(), e);
+            log.error(
+                    "Unexpected error during node execution session={} node={}",
+                    session.getId(),
+                    node.getId(),
+                    e);
             markExecutionFailed(execution, e.getMessage());
             failSession(session, "unexpected error: " + e.getMessage());
             return null;
@@ -299,9 +331,7 @@ public class AgentRuntime {
 
     private LLMRequest appendToolResult(LLMRequest prev, String toolName, String toolResult) {
         List<com.loom.llm.LLMMessage> history =
-                prev.getHistory() != null
-                        ? new ArrayList<>(prev.getHistory())
-                        : new ArrayList<>();
+                prev.getHistory() != null ? new ArrayList<>(prev.getHistory()) : new ArrayList<>();
         if (history.isEmpty()) {
             history.add(new com.loom.llm.LLMMessage("user", prev.getUserPrompt()));
         }
@@ -318,11 +348,12 @@ public class AgentRuntime {
 
     private void broadcast(String sessionId, EventType type, Map<String, Object> data) {
         try {
-            WorkflowEvent event = WorkflowEvent.builder()
-                    .eventType(type)
-                    .sessionId(sessionId)
-                    .data(mapper.valueToTree(data))
-                    .build();
+            WorkflowEvent event =
+                    WorkflowEvent.builder()
+                            .eventType(type)
+                            .sessionId(sessionId)
+                            .data(mapper.valueToTree(data))
+                            .build();
             sseManager.broadcast(event);
         } catch (Exception e) {
             log.error("Failed to broadcast {} for session={}", type, sessionId, e);
